apps/payment-sharing/manifest/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: payment-sharing
  name: payment-sharing
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: payment-sharing
  template:
    metadata:
      labels:
        io.kompose.service: payment-sharing
    spec:
      containers:
        - image: ghcr.io/startupnationlabs/spos/payment-sharing:sha-bcc8181
          name: payment-sharing
          ports:
            - containerPort: 3002
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
