apps/payment-sharing/manifest/base/service.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: payment-sharing
  name: payment-sharing
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3002
  selector:
    io.kompose.service: payment-sharing
